fix some minor layout issues lingering from resizing to smaller sheet width

--- a/osr_homebrew.css
+++ b/osr_homebrew.css
@@ -167,10 +167,6 @@ span.sheet-bold-font
 	height: 121px;
 	width:  490px;
 }
-.sheet-med-textarea {
-	height: 221px;
-	width:  490px;
-}
 .sheet-lrg-textarea {
 	height: 450px;
 }
